# research

akka-experiments/akka-basic-http/: README.md  build.sbt
akka-experiments/akka-basic-http/src/main/scala/: Foo.scala  WebServer.scala
akka-experiments/futures/: build.sbt
akka-experiments/futures/src/main/scala/: ResourceLeak.scala
cs453-p1/: Cargo.toml
cs453-shell/: Cargo.toml
cs453-shell/src/: main.rs
db-experiments/: build.sbt
db-experiments/src/main/scala/: Redis.scala
election-abstraction/: build.sbt
election-abstraction/src/main/scala/multiple/: MultipleCoordinatorAbstraction.scala
election-abstraction/src/main/scala/single/: ElectionAbstraction.scala
id-server-akka/: build.sbt  interface.txt
id-server-akka/src/main/resources/: logback.xml
id-server-akka/src/main/scala/: Example.scala  IdServer.scala  RunCluster.scala  WebServer.scala
id-server-akka/src/test/scala/: IdServerTest.scala
joins/: build.sbt
joins/src/main/scala/: Join.scala
learn-rust/: Cargo.toml
learn-rust/src/: main.rs
mongodb/: build.sbt
mongodb/src/main/scala/: Experiment.scala
thesis/: .gitignore  34_1_onyx.txt  README.md  all_onyx.txt  collector_1_1_onyx.txt  collector_1_34_onyx.txt  collector_1_many_onyx.txt  collector_1_minimal_onyx.txt  collector_all_onyx.txt  collector_few.txt  collector_minimal_onyx.txt  few_onyx.txt  isolate_onyx.txt  kill  kill_aws  one_local.txt  one_onyx.txt  run  run_aws  single_all_onyx.txt  some_onyx.txt
thesis/akka-benchmark/: .gitignore  build.sbt  readme.md
thesis/akka-benchmark/.bsp/: sbt.json
(+19 files in other folders)
