[package]
name = "cs453-shell"
version = "0.1.0"
authors = ["Arjun Shukla <arjunlalshukla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-vec-deque = "0.1.1"
regex = "1"
shell-words = "1.0.0"
lazy_static = "1.4.0"
